# DevSandbox

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  start_api.sh
backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0002_link.py
backend/blog/templates/blog/: base.html  cv.html  index.html  links.html  redirect.html
backend/blog/templates/registration/: login.html  logout.html
backend/info/: settings.py  urls.py
docker/: Dockeefile-vue-dev  docker-compose-dev.yml  docker-compose.yml
docker/config/nginx/: Dockerfile
docker/config/nginx/conf.d/: default.conf  docker.conf  docker2.conf  local.conf
docker/config/nginx/conf.d/mysites/: .mysite.conf.swp  mysite.conf
frontend/: .dockerignore  Dockerfile  Dockerfile-vue-dev  index.html  package.json  tailwind.config.js  vite.config.js
frontend/conf/: nginx-default.conf
frontend/conf/certs/: www.vandiest.it.crt  www.vandiest.it.key
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: NavBar.vue  TheFooter.vue  TheHeader.vue
frontend/src/router/: index.js
frontend/src/stores/: nav.ts
frontend/src/views/: AboutmeView.vue  HomeView.vue  LinksView.vue  PortfolioView.vue
