[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend (python + Django) of my DevSandbox website project"
authors = ["Martin van Diest <martin.van.diest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
django = "4.2"
django-cors-headers = "4.5.0"
django-environ = "0.11.2"
django-filter = "24.3"
djangorestframework = "3.15.2"
djangorestframework-jwt = "1.11.0"
environ = "1.0"
gunicorn = "23.0.0"
importlib-metadata = "8.5.0"
markdown = "3.7"
packaging = "24.2"
promise = "2.3"
psycopg2-binary = "2.9.10"
pygments = "2.18.0"
pyjwt = "1.7.1"
six = "1.16.0"
sqlparse = "0.5.1"
text-unidecode = "1.3"
typing-extensions = "4.12.2"
zipp = "3.21.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
